--- a/src/main/webapp/WEB-INF/views/books/show.html
+++ b/src/main/webapp/WEB-INF/views/books/show.html
@@ -10,11 +10,11 @@
 
 <div th:if="${owner}">
     <span>Book owner: </span>
-    <a th:href="@{/people/{personId}(personId=${book.getPersonId()})}"
+    <a th:href="@{/people/{id}(id=${book.getOwner().getId()})}"
        th:text="${owner.getName() + ', ' + owner.getYearOfBirth()}">Owner
     </a>
 
-    <form th:method="PATCH" th:action="@{/books/{bookId}/release(bookId=${book.getBookId()})}">
+    <form th:method="PATCH" th:action="@{/books/{id}/release(id=${book.getId()})}">
         <input type="submit" value="Release">
     </form>
 
@@ -22,10 +22,10 @@
 
 <div th:unless="${owner}">
     <span>This book is free, who should You assign it to?</span>
-    <form th:method="PATCH", th:action="@{/books/{bookId}/assign(bookId=${book.getBookId()})}">
+    <form th:method="PATCH", th:action="@{/books/{id}/assign(id=${book.getId()})}">
         <label for="person">Choose person:</label>
-        <select th:object="${person}" th:field="*{personId}" id="person">
-            <option th:each="person : ${people}" th:value="${person.getPersonId()}"
+        <select th:object="${person}" th:field="*{id}" id="person">
+            <option th:each="person : ${people}" th:value="${person.getId()}"
                     th:text="${person.getName()}"></option>
         </select>
         <input type="submit" value="Assign"/>
@@ -35,11 +35,12 @@
 
 <br>
 
-<a th:href="@{/books/{bookId}/edit(bookId=${book.getBookId()})}">Edit</a>
+<a th:href="@{/books/{id}/edit(id=${book.getId()})}">Edit</a>
 
-<form th:method="DELETE" th:action="@{/books/{bookId}(bookId=${book.getBookId()})}">
+<form th:method="DELETE" th:action="@{/books/{id}(id=${book.getId()})}">
     <input type="submit" value="Delete">
 </form>
+
 </body>
 </html>
 
